--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
@@ -1,6 +1,118 @@
 #hero
 {
+    /* width: auto; */
     height: 800px;
     background: url(../img/places/ocean.jpg) center;
     background-size: cover;
+    /* border: 2px solid black;
+    margin: 0 5px 10px 5px; */ 
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 2px 2px 50px rgb(0, 0, 0);
+    border-bottom: rgba(46, 156, 151,0.7) 2px inset;
+    
 }
+
+nav 
+{
+    width: -90%;
+}
+
+#hero-content
+{
+    width: 70%;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 4px 8px rgb(68, 67, 67);
+    border-radius: 10px;
+    text-align: center;
+    padding: 50px 0;
+    margin: 0 auto;
+    position: relative;
+    top: 180px;
+    
+}
+
+#hero-content h1
+{
+    color: rgb(229, 183, 0);
+    text-transform: uppercase;
+    font-size: 50px;
+    /* text-shadow: 2px 2px rgb(0, 0, 0); */
+    /* position: relative;
+    top: -15px; */
+    font-family: "Raleway", sans-serif;
+    margin: 0;
+    margin-bottom: 100px;
+    margin-top: 50px;
+}
+
+#hero-content p
+{
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px black;
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: 400;
+    margin-bottom: 100px;
+    border-top: 2px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    padding: 20px;
+}
+
+#hero-content a
+{
+    text-decoration: none;
+    background-color: rgba(229, 183, 0, 0.8);
+    padding: 12px 25px;
+    /* position: relative;
+    top: 100px; */
+    border-radius: 10px;
+    font-size: 25px;
+    font-weight: bolder;
+    color: black;
+    text-transform: uppercase;
+    
+}
+
+#hero-content a:hover
+{
+    color: rgba(229, 183, 0, 0.5);
+    transition: 0.4s;
+    background-color: rgba(0, 0, 0, 0.8);   
+}
+
+#highlights h2
+{
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+    color: #ffffff;
+    margin: 40px 0;
+    text-shadow: 1px 1px 15px rgb(1, 24, 22);
+
+
+}
+
+#destinations
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+    margin-top: 40px;
+}
+
+.destination img
+{
+    height: 200px;
+    border-radius: 20px;
+    width: 250px;
+    box-shadow: 2px 2px 15px black;
+
+}
+
+.destination p
+{
+    text-align: center;
+    margin-top: 10px;
+}
+
