--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
@@ -80,6 +80,11 @@ nav
     background-color: rgba(0, 0, 0, 0.8);   
 }
 
+#highlights
+{
+    padding: 25px;
+}
+
 #highlights h2
 {
     text-transform: uppercase;
