--- a/Password Strength Checker/style.css
+++ b/Password Strength Checker/style.css
@@ -32,24 +32,26 @@ form
 
 #container
 {
-    height: 150px;
+    height: 200px;
 }
 
 input
 {
     height: 20px;
-    width: 450px;
+    width: 250px;
     border-radius: 5px;
     padding: 5px 20px;
     font-size: 16px;
     border: #cccccc;
+    padding-top: 7px;
 }
 
 input:focus
 {
     outline: none;
-    box-shadow: 1px 2px 2px 7px #ffff;
+    box-shadow: 1px 1px 1px 2px #ffff;
     transition: 0.3s;
+    padding-top: 8px;
 }
 
 
@@ -59,6 +61,7 @@ input::placeholder
     text-align: center;
     color:#979797;
 }
+
 
 div
 {
@@ -83,18 +86,21 @@ div div.progressBar
     height: 100%;
     margin-top: 0;
     transition-timing-function: ease-out;
-    transition: 3s;
+    transition: 1s;
 }
 
-span#percent
+#percent
 {
-    color: transparent;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    font-size: 25px;
+    
 }
 
 button
 {
-    width: 400px;
-    height: 50px;
+    width: 200px;
+    height: 25px;
     border-radius: 755px;
     font-size: 16px;
     font-weight: bold;
@@ -107,7 +113,6 @@ button
 button:hover
 {
     outline: none;
-    box-shadow: 1px 1px 10px 1px;
     background-color: rgb(212, 76, 2);
     color: rgb(243, 243, 243);
     transition: 0.4s;
