--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
@@ -25,7 +25,7 @@ header
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 50px;
+    padding: 75px 50px;
     padding-right: 100px;
     position: absolute;
     width: 100%;
@@ -41,6 +41,8 @@ header
     font-size: 30px;
     text-decoration: none; 
     text-transform: uppercase;
+    position: relative;
+    top:-70px;
 }
 
 
@@ -65,7 +67,7 @@ header .right-icons
     text-transform: uppercase;
     text-shadow: 2px 2px black;
     font-size: 20px;
-    padding: 25px 45px;
+    padding: 15px 45px;
     font-weight: 700;
     font-family:Arial, Helvetica, sans-serif;
     border-radius: 10px;
@@ -76,8 +78,36 @@ header .right-icons:hover
 {
     color:rgba(0, 0, 0, 0.7);
     text-shadow: none;
-    transition: 0.5s;
+    transition: 0.3s;
     background-color: rgba(229, 183, 0, 0.9);
 }
 
+footer
+{
+    background: linear-gradient(0deg, rgb(17, 17, 17) 22%, rgb(24, 24, 24) 52%, rgb(45,44,44,1) 100%);
+    display: flex;
+    justify-content:center;
+    padding: 10px;
 
+}
+
+footer ul
+{   
+    display: flex;
+    
+}
+
+footer li
+{
+    width: 70px;
+    height: 70px;
+    margin: 0 40px;
+      
+}
+
+footer img
+{
+    width: 100%;
+    height: 100%;
+    
+}
