--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
@@ -1,7 +1,8 @@
 #hero
 {
-    /* width: auto; */
-    height: 800px;
+    width: 100%;
+    height: 900px;
+    margin: auto;
     background: url(../img/places/ocean.jpg) center;
     background-size: cover;
     /* border: 2px solid black;
@@ -14,12 +15,18 @@
 
 nav 
 {
-    width: -90%;
+    width: 100%;
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    justify-content: right;
 }
 
 #hero-content
 {
     width: 70%;
+    height: 60%;
+    margin: auto;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 2px 4px 8px rgb(68, 67, 67);
     border-radius: 10px;
@@ -40,7 +47,7 @@ nav
     /* position: relative;
     top: -15px; */
     font-family: "Raleway", sans-serif;
-    margin: 0;
+    margin: auto;
     margin-bottom: 100px;
     margin-top: 50px;
 }
@@ -52,24 +59,33 @@ nav
     text-transform: uppercase;
     font-size: 25px;
     font-weight: 400;
+    margin: auto;
     margin-bottom: 100px;
     border-top: 2px solid rgba(255, 255, 255, 0.3);
     border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     padding: 20px;
+    
 }
 
 #hero-content a
 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 200px;
+    justify-content: center;
+    margin: auto;
     text-decoration: none;
     background-color: rgba(229, 183, 0, 0.8);
     padding: 12px 25px;
     /* position: relative;
     top: 100px; */
     border-radius: 10px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bolder;
     color: black;
     text-transform: uppercase;
+    
+    
     
 }
 
@@ -93,24 +109,31 @@ nav
     color: #ffffff;
     margin: 40px 0;
     text-shadow: 1px 1px 15px rgb(1, 24, 22);
-
-
 }
 
 #destinations
 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 50px;
-    margin-top: 40px;
+    justify-content:space-evenly;
+    flex-direction: row;
+    margin:50px 40px;
+    font-weight: 700;
+    font-size: 17px;
+    
+}
+
+#destinations strong
+{
+    color: rgb(229, 183, 0);
+    text-shadow: 1px 1px 5px #000;
 }
 
 .destination img
 {
+    width: 350px;
     height: 200px;
     border-radius: 20px;
-    width: 250px;
     box-shadow: 2px 2px 15px black;
 
 }
@@ -118,6 +141,6 @@ nav
 .destination p
 {
     text-align: center;
-    margin-top: 10px;
+    margin: 10px 15px;
 }
 
