--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
@@ -19,7 +19,7 @@ nav
     display: flex;
     flex-direction:row;
     flex-wrap:wrap;
-    justify-content: right;
+    justify-content: end;
 }
 
 #hero-content
