--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
@@ -87,7 +87,7 @@ footer
     background: linear-gradient(0deg, rgb(17, 17, 17) 22%, rgb(24, 24, 24) 52%, rgb(45,44,44,1) 100%);
     display: flex;
     justify-content:center;
-    padding: 10px;
+    padding: 50px 0;
 
 }
 
@@ -107,7 +107,7 @@ footer li
 
 footer img
 {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     
 }
