--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
@@ -62,24 +62,26 @@ header li
 
 header .right-icons
 {
-    color: rgb(255, 255, 255);
+    color: rgb(229, 183, 0);
     text-decoration: none; 
     text-transform: uppercase;
-    text-shadow: 2px 2px black;
-    font-size: 20px;
+    text-shadow: 1px 1px  black;
+    font-size: 15px;
     padding: 15px 45px;
     font-weight: 700;
     font-family:Arial, Helvetica, sans-serif;
     border-radius: 10px;
+    margin-right: 20px;
     /* background-color: rgba(229, 183, 0, 0.9) */
 }
 
 header .right-icons:hover
 {
-    color:rgba(0, 0, 0, 0.7);
-    text-shadow: none;
-    transition: 0.3s;
-    background-color: rgba(229, 183, 0, 0.9);
+    color:rgba(0, 0, 0, 0.505);
+   
+    transition: 0.7s;
+    
+    /* background-color: rgba(229, 183, 0, 0.9); */
 }
 
 footer
