creating card content

--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
@@ -10,7 +10,7 @@ body
 {
     font-family: "Quicksand", sans-serif;
     margin: 0;
-    background: linear-gradient(0deg, rgb(255, 255, 255) -10%, rgb(31, 177, 165) 20%, rgb(31, 177, 165) 100%);;
+    background: linear-gradient(0deg, rgb(255, 255, 255) -10%, rgb(94, 208, 198) 20%, rgb(11, 91, 85) 100%);
 }
 
 ul
