--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
@@ -1,15 +1,36 @@
-/* body
+body
 {
-    /* background: linear-gradient(0deg, rgb(48, 48, 48) 10%, rgb(14, 30, 29) 40%, rgb(0, 10, 9) 90%);
-} */
+    /* background: linear-gradient(0deg, rgb(48, 48, 48) 10%, rgb(14, 30, 29) 40%, rgb(0, 10, 9) 90%); */
+    
+}
+
 
 header
 {
     position: static;
 }
 
+main
+{
+    width: 850px;
+    margin:0 auto;
+    /* border: 1px solid black; */
+}
+
+main li
+{
+    display: flex;
+    background-color: #fff;
+
+}
+
 main li img
 {
     width: 300px;
     height: 280px;
+}
+
+.item-content
+{
+    padding: 25px;
 }
