--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
@@ -1,6 +1,6 @@
 body
 {
-    /* background: linear-gradient(0deg, rgb(48, 48, 48) 10%, rgb(14, 30, 29) 40%, rgb(0, 10, 9) 90%); */
+     background: linear-gradient(0deg, rgb(48, 48, 48) 10%, rgb(14, 30, 29) 40%, rgb(0, 10, 9) 90%);
     
 }
 
@@ -12,15 +12,27 @@ header
 
 main
 {
-    width: 850px;
+    width: 50%;
+    
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
     margin:0 auto;
-    /* border: 1px solid black; */
+    border: 1px solid black;
+    margin-bottom: 50px;
 }
+
 
 main li
 {
+    width: 100%;
     display: flex;
     background-color: #fff;
+    box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
+    border-radius: 7px;
+    overflow: hidden;
+    object-fit: cover;
+    
 
 }
 
@@ -32,5 +44,31 @@ main li img
 
 .item-content
 {
+   
     padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;    
+}
+
+.item-content h2
+{
+    /* margin-bottom: 20px; */
+    color: rgba(0, 0, 0, 0.745);
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+.actions
+{
+    text-align: right;
+
+}
+
+.actions a
+{
+    text-decoration:none;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: rgb(237, 84, 1);
 }
