--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
@@ -36,7 +36,7 @@ header
 {
     padding: 10px;
     font-family: "Oleo Script", sans-serif;
-    color: rgb(229, 183, 0);
+    color: rgb(255, 102, 0);
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
     font-size: 30px;
     text-decoration: none; 
@@ -62,7 +62,7 @@ header li
 
 header .right-icons
 {
-    color: rgb(229, 183, 0);
+    color: rgb(255, 102, 0);
     text-decoration: none; 
     text-transform: uppercase;
     text-shadow: 1px 1px  black;
@@ -77,9 +77,10 @@ header .right-icons
 
 header .right-icons:hover
 {
-    color:rgba(0, 0, 0, 0.505);
-   
+    color:rgba(0, 0, 0, 0.983);
+    background-color: rgba(247, 169, 2, 0.983) ;
     transition: 0.7s;
+    text-shadow: none;
     
     /* background-color: rgba(229, 183, 0, 0.9); */
 }
