--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/styles.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 900px;
     margin: auto;
-    background: url(../img/places/ocean.jpg) center;
+    /* background: url(../img/places/ocean.jpg) center; */
     background-size: cover;
     /* border: 2px solid black;
     margin: 0 5px 10px 5px; */ 
@@ -15,7 +15,7 @@
 
 nav 
 {
-    width: 100%;
+    /* width: 50%; */
     display: flex;
     flex-direction:row;
     flex-wrap:wrap;
@@ -24,9 +24,10 @@ nav
 
 #hero-content
 {
-    width: 70%;
-    height: 60%;
+    width: 90%;
+    height: 70%;
     margin: auto;
+    background: url(../img/places/ocean.jpg) center;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 2px 4px 8px rgb(68, 67, 67);
     border-radius: 10px;
@@ -43,7 +44,7 @@ nav
     color: rgb(229, 183, 0);
     text-transform: uppercase;
     font-size: 50px;
-    /* text-shadow: 2px 2px rgb(0, 0, 0); */
+    text-shadow: 2px 2px 5px rgb(0, 0, 0);
     /* position: relative;
     top: -15px; */
     font-family: "Raleway", sans-serif;
@@ -54,8 +55,8 @@ nav
 
 #hero-content p
 {
-    color: rgb(255, 255, 255);
-    text-shadow: 1px 1px black;
+    color: rgb(229, 183, 0);
+    text-shadow: 1px 1px 5px black;
     text-transform: uppercase;
     font-size: 25px;
     font-weight: 400;
@@ -75,14 +76,14 @@ nav
     justify-content: center;
     margin: auto;
     text-decoration: none;
-    background-color: rgba(229, 183, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     padding: 12px 25px;
     /* position: relative;
     top: 100px; */
     border-radius: 10px;
     font-size: 20px;
     font-weight: bolder;
-    color: black;
+    color: rgba(236, 189, 1, 0.935);
     text-transform: uppercase;
     
     
@@ -91,9 +92,9 @@ nav
 
 #hero-content a:hover
 {
-    color: rgba(229, 183, 0, 0.5);
+    color: rgb(0, 0, 0);
     transition: 0.4s;
-    background-color: rgba(0, 0, 0, 0.8);   
+    background-color: rgba(229, 183, 0, 0.8);   
 }
 
 #highlights
