--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
@@ -54,7 +54,7 @@ main li img
 .item-content h2
 {
     /* margin-bottom: 20px; */
-    color: rgba(0, 0, 0, 0.745);
+    color: rgba(0, 0, 0, 0.905);
     text-transform: uppercase;
     font-weight: bolder;
 }
@@ -71,4 +71,12 @@ main li img
     text-transform: uppercase;
     font-weight: 900;
     color: rgb(237, 84, 1);
+    padding: 10px 20px;
+}
+
+.actions:hover a
+{
+    background-color: rgb(244, 207, 187);
+    transition: 0.5s;
+    border-radius: 5px;
 }
