--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
@@ -18,7 +18,7 @@ main
     justify-content: center;
     flex-direction: row;
     margin:0 auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-bottom: 50px;
 }
 
@@ -72,6 +72,7 @@ main li img
     font-weight: 900;
     color: rgb(237, 84, 1);
     padding: 10px 20px;
+    
 }
 
 .actions:hover a
