--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
@@ -10,28 +10,26 @@ header
     position: static;
 }
 
-main
+main ul
 {
-    width: 50%;
+    width: 1200px;
+    margin: 0 auto;
     
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    margin:0 auto;
-    /* border: 1px solid black; */
+
     margin-bottom: 50px;
 }
 
 
 main li
 {
-    width: 100%;
+    
     display: flex;
     background-color: #fff;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     border-radius: 7px;
     overflow: hidden;
     object-fit: cover;
+    width: 500px;
     
 
 }
