--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/places.css
@@ -14,24 +14,34 @@ main ul
 {
     width: 1200px;
     margin: 0 auto;
-    
-
     margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+
 }
+
+li:nth-of-type(3)
+{
+    grid-column: 1/3;
+}
+
+li:nth-of-type(10)
+{
+    grid-column: 1/3;
+}
+
 
 
 main li
 {
-    
+    width: 100%;
     display: flex;
     background-color: #fff;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     border-radius: 7px;
     overflow: hidden;
     object-fit: cover;
-    width: 500px;
-    
-
 }
 
 main li img
@@ -43,7 +53,7 @@ main li img
 
 .item-content
 {
-   
+    width: 100%;
     padding: 25px;
     display: flex;
     flex-direction: column;
