--- a/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/styles/shared.css
@@ -62,6 +62,7 @@ header li
 
 header .right-icons
 {
+    
     color: rgb(255, 102, 0);
     text-decoration: none; 
     text-transform: uppercase;
@@ -71,8 +72,8 @@ header .right-icons
     font-weight: 700;
     font-family:Arial, Helvetica, sans-serif;
     border-radius: 10px;
-    margin-right: 20px;
-    /* background-color: rgba(229, 183, 0, 0.9) */
+    /* margin-right: 20px; */
+    
 }
 
 header .right-icons:hover
