--- a/07-Project07 - Landing Page/assets/css/styles.css
+++ b/07-Project07 - Landing Page/assets/css/styles.css
@@ -1,8 +1,54 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    /* font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif; */
 }
 
-body{
-    background-color: rgb(2, 55, 55);
+html{
+    font-size: 62.5%;
 }
+
+
+body {
+    /* background-color: rgb(2, 55, 55); */
+    background-color: #0E3F3E;
+    background-image: url("../img/confetti-doodles.png");
+    background-attachment: fixed;;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.6rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1{
+    font-size: 5.9rem;
+    text-transform: uppercase;
+}
+h2{
+    font-size: 5.4rem;
+    text-transform: uppercase;
+}
+h3{
+    font-size: 4.9rem;
+    text-transform: uppercase;
+}
+h4{
+    font-size: 4.4rem;
+    text-transform: uppercase;
+}
+h5{
+    font-size: 3.9rem;
+    text-transform: uppercase;
+}
+h5{
+    font-size: 3.4rem;
+    text-transform: uppercase;
+}
+h6{
+    font-size: 2.9rem;
+    text-transform: uppercase;
+}
+
