--- a/07-Project07 - Landing Page/assets/css/styles.css
+++ b/07-Project07 - Landing Page/assets/css/styles.css
@@ -1,54 +1,75 @@
-* {
+:root {
+    --primary-color: #0E3F3E;
+    --white-color: #f7f7f7;
+    --gap: 3rem;
+  }
+  
+  * {
     margin: 0;
     padding: 0;
-    /* font-family: 'Montserrat', sans-serif;
-    font-family: 'Open Sans', sans-serif; */
-}
-
-html{
+  }
+  
+  html {
     font-size: 62.5%;
-}
-
-
-body {
-    /* background-color: rgb(2, 55, 55); */
-    background-color: #0E3F3E;
-    background-image: url("../img/confetti-doodles.png");
-    background-attachment: fixed;;
+  }
+  
+  body {
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.6rem;
-}
-
-h1, h2, h3, h4, h5, h6 {
+    font-size: 2rem;
+    color: var(--primary-color);
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
-}
-
-h1{
-    font-size: 5.9rem;
+  }
+  
+  h1 {
+    font-size: 6rem;
     text-transform: uppercase;
-}
-h2{
-    font-size: 5.4rem;
+  }
+  
+  h1 {
+    font-size: 6rem;
     text-transform: uppercase;
-}
-h3{
-    font-size: 4.9rem;
-    text-transform: uppercase;
-}
-h4{
-    font-size: 4.4rem;
-    text-transform: uppercase;
-}
-h5{
-    font-size: 3.9rem;
-    text-transform: uppercase;
-}
-h5{
-    font-size: 3.4rem;
-    text-transform: uppercase;
-}
-h6{
-    font-size: 2.9rem;
-    text-transform: uppercase;
-}
-
+  }
+  
+  h2 {
+    font-size: 5.5rem;
+  }
+  
+  h3 {
+    font-size: 5rem;
+  }
+  
+  h4 {
+    font-size: 4.5rem;
+  }
+  
+  h5 {
+    font-size: 4rem;
+  }
+  
+  h6 {
+    font-size: 3.5rem;
+  }
+  
+  .main-bg {
+    background-image: url('../img/confetti-doodles.png');
+    background-size: cover;
+    background-position: center center;
+    color: var(--white-color);
+  }
+  
+  .white-bg {
+    background: var(--white-color);
+  }
+  
+  .main-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: var(--gap);
+  }
+  
+  .section {
+    min-height: 100vh;
+  }
